feat(user): Add the API of Updating Avatar
